# ecommerce-kafka-analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose-attacker.yml  docker-compose-dev.yml  docker-compose-kafka.yml  docker-compose-services.yml  docker-compose-test.yml  docker-compose-ui.yml  docker-compose.cluster.yml  docker-compose.yml  kafka-hosts.txt  kafka_jaas.conf
analytics-service/: .dockerignore  .env.example  Dockerfile  config.py  data_population.py  main.py  requirements.txt
config/: kafka_jaas.conf  kafka_server_jaas.conf
event-producer/: .env.example  config.py  data_generation.py  main.py  models.py  producer.py  repository.py  requirements.txt  simulator.py  user_session.py
event-simulator/: event_service.py  main.py  mock_products_100.json  mock_users_50.json  model.py  repository.py
event-simulator-service/: .env.example  Dockerfile  config.py  data_generation.py  main.py  requirements.dev.txt  requirements.txt
firebase/: .firebaserc
k8s/: 00-setup-minikube.md  01-install-strimzi.sh  02-namespace.yaml  03-kafka-cluster.yaml  04-kafka-users.yaml  05-kafka-topics.yaml  README-kafka.md  README.md  bad-consumer-deployment.yml  bad-producer-deployment.yml  cleanup-kafka.sh  consumer-deployment.yml  deploy-kafka.sh  install-strimzi.sh  kafka-cluster.yml  kafka-topics.yml  kafka-users.yml  kafka-utils.sh  kind-config.yaml  producer-deployment.yml  setup-minikube.sh  test-kafka.sh
scripts/: generate-certs.sh  generate.sh  init-topics.sh  k8s-command.sh  k8s-start.sh  (+1 more)
shared/: pyproject.toml
shared/shared/: models.py
(+50 files in other folders)
